image adjustments pretty much done

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 <div class="col-md-2 name">
                     Paul Rose
                 </div>
-                <div class="col-md-7"></div>
-                <div class="col-md-3 navlinks text-center">
+                <!-- <div class="col-md-7"></div> -->
+                <!-- <div class="col-md-10 navlinks text-center"> -->
+                <div class="col-md-3 col-md-offset-7 navlinks text-center">
                     <a href="index.html">About</a>
                     |
                     <a href="portfolio.html">Portfolio</a>
@@ -34,10 +35,10 @@
         <div class="row">
             <section class="col-md-8">
                 <div class="aboutme">
-                    <div>
+                    <div class="aboutmetitle">
                         About Me
                     </div>
-                    <div>
+                    <div class="clear-fix">
                         <img class="img-responsive selfie" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAASyAAAAJGEzN2I5ZDYyLTk3YTUtNGI5MC1iOTY1LTVhNTM4YzAxZmZjNQ.jpg" alt="Paul Rose">
 
                         <p>Hi, my name is Paul Rose. I'm from Kansas. Kansas is flat, but Kansas is cool...sort of. I attened the University of Kansas and obtained a degree in Petroleum Engineering. 
@@ -54,14 +55,14 @@
                 </div>   
             </section>
             <section class="col-md-4 text-center connectwithme">
-                <div class="">
-                    <div class="row">
+                <div class="connect">
+                    <div class="connecttitle">
                         Connect with Me
                     </div>
                     <div class="row">
-                        <a href="https://github.com/prose34" target="_blank"><img class="img-responsive center-block socialimg" src="assets/images/if_github_square_black_107109.png" alt="Github Logo"></a>
-                        <a href="https://www.linkedin.com/in/paul-rose-b29346b7/" target="_blank"><img class="img-responsive center-block socialimg" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn Logo"></a>
-                        <a href="https://stackoverflow.com/users/9232938/prose" target="_blank"><img class="img-responsive center-block socialimg" src="assets/images/if_overflow_334695.png" alt="Stack Overflow Logo"></a>
+                        <a href="https://github.com/prose34" target="_blank"><img class="img-responsive center-block socialimg imgmar" src="assets/images/github-128.png" alt="Github Logo"></a>
+                        <a href="https://www.linkedin.com/in/paul-rose-b29346b7/" target="_blank"><img class="img-responsive center-block socialimg imgmar" src="assets/images/linkedin-128.png" alt="LinkedIn Logo"></a>
+                        <a href="https://stackoverflow.com/users/9232938/prose" target="_blank"><img class="img-responsive center-block socialimg" src="assets/images/stackoverflow-128.png" alt="Stack Overflow Logo"></a>
                     </div>
                 </div>    
             </section>
