add psychic game

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,12 @@
                         Portfolio
                     </div>
                     <div class="col-sm-6">
+                        <div class="imagethreediv">
+                            <a href="https://prose34.github.io/Psychic-Game/" target="_blank">
+                                <img class="portfolioimg img-responsive psychic" src="assets/images/psychic.jpg" alt="Psychic Game"> 
+                            </a>
+                            <h2>Psychic</h2>
+                        </div> 
                         <div class="imageonediv">
                             <img class="portfolioimg img-responsive" src="assets/images/harley.jpg" alt="Iron 883 Motorcycle">
                             <h2>Motorcycle</h2>
@@ -45,11 +51,7 @@
                         <div class="imagetwodiv">
                             <img class="portfolioimg img-responsive" src="assets/images/coin.jpg" alt="Large Cent"> 
                             <h2>U.S. Coins</h2>
-                        </div>
-                        <div class="imagethreediv">
-                            <img class="portfolioimg img-responsive" src="assets/images/nba.jpg" alt="Kobe"> 
-                            <h2>Basketball</h2>
-                        </div>      
+                        </div>     
                     </div>
                     <div class="col-sm-6">
                         <div class="imagefourdiv">
@@ -59,8 +61,11 @@
                         <div class="imagefivediv">
                             <img class="portfolioimg img-responsive testimg5" src="assets/images/mineral.jpg" alt="Mineral"> 
                             <h2>Minerals</h2>
-
                         </div>
+                        <div class="imagethreediv">
+                                <img class="portfolioimg img-responsive" src="assets/images/nba.jpg" alt="Kobe"> 
+                                <h2>Basketball</h2>
+                        </div>   
                     </div>
                 </div>   
             </section>
