--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,17 @@
                         Portfolio
                     </div>
                     <div class="col-sm-6">
+                        <!-- <div class="imagethreedivGem">
+                                <a href="https://prose34.github.io/week-4-game/" target="_blank">
+                                    <img class="portfolioimg img-responsive" src="assets/images/diamond2.png" alt="Gem Game"> 
+                                </a>
+                            <h2>Crystal Game</h2>
+                        </div>  -->
                         <div class="imagethreediv">
                             <a href="https://prose34.github.io/Psychic-Game/" target="_blank">
                                 <img class="portfolioimg img-responsive psychic" src="assets/images/psychic.jpg" alt="Psychic Game"> 
                             </a>
-                            <h2>Psychic</h2>
+                            <h2>Psychic Game</h2>
                         </div> 
                         <div class="imageonediv">
                             <img class="portfolioimg img-responsive" src="assets/images/harley.jpg" alt="Iron 883 Motorcycle">
@@ -54,13 +60,15 @@
                         </div>     
                     </div>
                     <div class="col-sm-6">
+                        <div class="imagefivediv">
+                            <a href="https://prose34.github.io/week-4-game/" target="_blank">
+                            <img class="portfolioimg img-responsive testimg5" src="assets/images/mineral.jpg" alt="Mineral"> 
+                            </a>
+                            <h2>Crystal Game</h2>
+                        </div>
                         <div class="imagefourdiv">
                             <img class="portfolioimg img-responsive" src="assets/images/comics.jpg" alt="Rare Comic Books">
                             <h2>Comic Books</h2>
-                        </div>
-                        <div class="imagefivediv">
-                            <img class="portfolioimg img-responsive testimg5" src="assets/images/mineral.jpg" alt="Mineral"> 
-                            <h2>Minerals</h2>
                         </div>
                         <div class="imagethreediv">
                                 <img class="portfolioimg img-responsive" src="assets/images/nba.jpg" alt="Kobe"> 
