added trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,15 @@
                         Portfolio
                     </div>
                     <div class="col-sm-6">
-                        <!-- <div class="imagethreedivGem">
-                                <a href="https://prose34.github.io/week-4-game/" target="_blank">
-                                    <img class="portfolioimg img-responsive" src="assets/images/diamond2.png" alt="Gem Game"> 
-                                </a>
-                            <h2>Crystal Game</h2>
-                        </div>  -->
+                        <div class="imagethreediv">
+                            <a href="https://prose34.github.io/TriviaGame/" target="_blank">
+                                <img class="portfolioimg img-responsive" src="assets/images/marveltrivia.jpg" alt="Trivia Game"> 
+                            </a>
+                            <h2>Trivia Game</h2>
+                        </div>
                         <div class="imagethreediv">
                             <a href="https://prose34.github.io/Psychic-Game/" target="_blank">
-                                <img class="portfolioimg img-responsive psychic" src="assets/images/psychic.jpg" alt="Psychic Game"> 
+                                <img class="portfolioimg img-responsive" src="assets/images/psychic.jpg" alt="Psychic Game"> 
                             </a>
                             <h2>Psychic Game</h2>
                         </div> 
