--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,15 @@
                         </div>     
                     </div>
                     <div class="col-sm-6">
+
+                        <div class="imagethreediv">
+                            <a href="https://prose34.github.io/GiphyAPI_Homework/" target="_blank">
+                                <img class="portfolioimg img-responsive" src="assets/images/comicGif.gif" alt="Gif Generator"> 
+                            </a>
+                            <h2>Giphy Gif Generator</h2>
+                        </div>
+
+
                         <div class="imagefivediv">
                             <a href="https://prose34.github.io/week-4-game/" target="_blank">
                             <img class="portfolioimg img-responsive testimg5" src="assets/images/mineral.jpg" alt="Mineral"> 
