add firebase and readme link

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,12 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="imagethreediv">
+                            <a href="https://prose34.github.io/FirebaseTrainHW/" target="_blank">
+                                <img class="portfolioimg img-responsive" src="assets/images/train.jpg" alt="Train Firebase"> 
+                            </a>
+                            <h2>Trains (Firebase)</h2>
+                        </div>
+                        <div class="imagethreediv">
                             <a href="https://prose34.github.io/TriviaGame/" target="_blank">
                                 <img class="portfolioimg img-responsive" src="assets/images/marveltrivia.jpg" alt="Trivia Game"> 
                             </a>
